# algosh

./: .gitignore  Cargo.toml  LICENSE  README.md  example.ash
algo/: Cargo.toml
algo-sh/: Cargo.toml
algo-sh/src/: main.rs
algo/src/: defs.rs  lexer.rs  lib.rs  linearizer.rs  parser.rs  primitive.rs  ssa.rs  strings.rs  tests.rs  types.rs
algo/src/parser/: exprs.rs  mod.rs  types.rs
algo/src/ssa/: mod.rs  nodes.rs  optimizer.rs
examples/: simple_arithmetic.ash
src/: bin.rs  lexer.rs  lib.rs  linearizer.rs  minifier.rs  optimizer.rs  parser.rs  ssa.rs  strings.rs
src/lexer/: mod.rs  token.rs
src/parser/: expr.rs  mod.rs  node.rs
src/parser/expr/: argument_cell.rs  binary.rs  grouping.rs  mod.rs  operator.rs  terminator.rs  transform.rs  value.rs
